# python-backtester

./: README.md  pyproject.toml
src/python_backtester/: backtest-strategy.py  flexible-backtest-strategy.py  functions.py  main.py  temp_transfert_ia  test.py  transf.txt  walkforward.py
