[project]
name = "python-backtester"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lambnjo", email = "lambertnjolea@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
