[project]
name = "python-backtester"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "lambnjo", email = "lambertnjolea@gmail.com"},
]
dependencies = ["vectorbt>=0.27.1", "pandas>=2.2.3", "numpy>=2.1.3", "python-binance>=1.0.27", "ipykernel>=6.29.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
